# DELTA

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  Procfile  README.md  SETUP_GUIDE.md  env.example  pyproject.toml  railway.json  render.yaml
docs/: ARCHITECTURE.md
examples/: agent_client.py
scripts/: docker-local.sh  start.sh
src/delta/: __init__.py  config.py
src/delta/api/: __init__.py  main.py
src/delta/api/routes/: agents.py  auth.py  exec.py  files.py  messaging.py  sandboxes.py
src/delta/api/websocket/: __init__.py  terminal.py
src/delta/core/: __init__.py  agents.py  auth.py  messaging.py  tokens.py
src/delta/models/: __init__.py  agent.py  message_log.py  token_usage.py  user.py
src/delta/sdk/: __init__.py  client.py  models.py
tests/: __init__.py
tests/v0.1/: README.md  __init__.py  test_agents.py  test_auth.py  test_docker.py  test_messaging.py  test_sandbox.py  test_tokens.py
